[package]
name = "sharp"
version = "0.1.0"
description = "sharp custom swap contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sharp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
spl-token = "4.0.1"

solana-program = "1.18.13"
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0" }
